# RyeTracer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.org  imgui.ini  init.sh  premake5.lua
Barley/: premake5.lua
Barley/include/: App.h  Image.h  Window.h
Barley/src/: App.cpp  Image.cpp  Window.cpp  main.cpp
BarleyGUI/include/: App.h  Barley.h
BarleyGUI/src/: App.cpp  Barley.cpp
BarleyTracing/: premake5.lua
BarleyTracing/include/: Camera.h  Film.h  Hit.h  Image.h  Material.h  Object.h  Ray.h  Renderer.h  RyeTracer.h  Sphere.h  Utils.h
BarleyTracing/src/: Camera.cpp  Film.cpp  Image.cpp  Renderer.cpp  RyeTracer.cpp  Scene.cpp  Sphere.cpp  main.cpp
Rye/: premake5.lua
Rye/Shaders/: RayTracing.comp
Rye/include/: Camera.h  Film.h  Material.h  Object.h  Plane.h  Ray.h  Renderer.h  Scene.h  Shader.h  Sphere.h  Transform.h  Utils.h
Rye/src/: Camera.cpp  Film.cpp  Material.cpp  Object.cpp  Renderer.cpp  Scene.cpp  Shader.cpp
RyeApp/: CMakeLists.txt
RyeApp/src/: App.cpp  App.h  Window.cpp  Window.h  main.cpp
RyeTracer/: premake5.lua
RyeTracer/include/: Camera.h  Film.h  HitData.h  Material.h  Materials.h  Object.h  Quad.h  Renderer.h  RyeTracer.h  Scene.h  Sphere.h  Utils.h
RyeTracer/src/: Camera.cpp  Film.cpp  Renderer.cpp  RyeTracer.cpp  Scene.cpp  Sphere.cpp  main.cpp
docs/: raytracing.org
include/: App.h
include/Assets/: Object.h
include/Materials/: Conductor.h  Dielectric.h  Emissive.h  Glossy.h  Material.h
include/Math/: Fresnel.h
include/Objects/: AABB.h  Object.h  Plane.h  Quad.h  Sphere.h
include/Renderer/: Camera.h  Ray.h  Renderer.h  Scene.h
include/UI/: App.h  Window.h
src/: App.cpp  App.h  Camera.cpp  Camera.h  Hit.h  Image.cpp  Image.h  Material.h  Object.h  Random.h  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  bsdf.h  main.cpp
src/Assets/: Material.cpp  Object.cpp
src/Materials/: Conductor.cpp  Dielectric.cpp  Emission.h  Emissive.cpp  Emissive.h  Glass.h  Glossy.cpp  Glossy.h  Lambertian.cpp  Lambertian.h  Metallic.h  Specular.h
src/Math/: Fresnel.h
src/Objects/: AABB.cpp  Material.cpp  Object.h  Plane.cpp  Quad.cpp  Sphere.cpp
src/Renderer/: Camera.cpp  Camera.h  (+4 more)
(+47 files in other folders)
